<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFE3F1" >
    
    <TextView
		android:id="@+id/welcomeTextView"
		android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>
    
    <TextView
		android:id="@+id/restaurantTextView"
		android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
		android:textSize="35sp"
		android:gravity="center"
		android:layout_below="@id/welcomeTextView"
		android:layout_centerInParent="true"/>
    
    <TextView
		android:id="@+id/inventoryTextView"
		android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:gravity="center"
		android:textSize="35sp"
		android:layout_below="@id/restaurantTextView"
		android:layout_centerInParent="true"/>
    
    <TextView
		android:id="@+id/managerTextView"
		android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manager"
        android:gravity="center"
		android:textSize="35sp"
		android:layout_below="@id/inventoryTextView"
		android:layout_centerInParent="true"/>
    
    <Button
		android:id="@+id/launchButton"
		android:background="#9999ff"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="60dp"
		android:layout_marginBottom="30dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/welcome_button"
		android:textStyle="bold"
        android:layout_below="@id/managerTextView"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>