<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE3F1" >

    <TextView
		android:id="@+id/textView1"
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
		android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/menu_item_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
    
    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="70dp" >

	
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical" >
		<HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbars="vertical" >
        	
	<TableLayout
      	android:id="@+id/tableLayout1"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content" >
       	
	    <TableRow
            android:id="@+id/tableRow1"
            android:layout_marginLeft="1dp"
           	android:layout_marginRight="1dp" >

		<TextView
			android:id="@+id/tablerowtextview1"
            android:layout_margin="1dp"
			android:background="#3a0078"
			android:gravity="center"
			android:padding="20dp"
			android:text="@string/ingredients"
			android:textColor="#ffffff"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/tablerowtextview2"
			android:layout_margin="1dp"
			android:background="#3a0078"
           	android:gravity="center"
           	android:padding="20dp"
           	android:text="@string/quantity"
           	android:textColor="#ffffff"
    	   	android:textStyle="bold" />
       	</TableRow>
       	
       	 <TableRow
           	android:id="@+id/tableRow2"
           	android:layout_width="wrap_content"
           	android:layout_height="wrap_content"
           	android:layout_marginLeft="1dp"
           	android:layout_marginRight="1dp" >

           	<EditText
	       		android:id="@+id/editText1"
        		android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
       			android:layout_margin="1dp"
       			android:maxHeight="1dp"
       			android:singleLine="true"
       			android:background="#b0e0e6"
               	android:gravity="center"
               	android:padding="20dp"
               	android:textColor="#000000"
               	android:textStyle="bold" >
       			<requestFocus />
    		</EditText>

           	<EditText
       			android:id="@+id/editText2"
       			android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
       			android:layout_margin="1dp"
       			android:maxHeight="1dp"
       			android:singleLine="true"
       			android:background="#9ec9cf"
               	android:gravity="center"
               	android:padding="20dp"
               	android:textColor="#000000"
               	android:textStyle="bold">
    		</EditText>
       	</TableRow>
    </TableLayout>
        
	<TextView
       	android:id="@+id/textView2"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:layout_marginTop="40dp"
       	android:layout_marginBottom="20dp"
       	android:text="@string/add_more"
       	android:textColor="#FF0000"
       	android:textStyle="bold|italic"
       	android:textSize="15sp" />
	</LinearLayout>
	</HorizontalScrollView>

	<Button
		android:id="@+id/button1"
		android:background="#9999ff"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:layout_marginTop="100dp"
    	android:text="@string/ok"
		android:textStyle="bold" />
	
	</LinearLayout>
    </ScrollView>

</RelativeLayout>