<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE3F1" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/inventory_min_max"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />
    
    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="40dp" >
        
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/tablerowtextview1"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#3a0078"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/item"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/tablerowtextview2"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#3a0078"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/min"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            
            <TextView
                android:id="@+id/tablerowtextview3"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="#3a0078"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/max"
                android:textColor="#ffffff"
                android:textStyle="bold" />
            
		</TableRow>
		
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <EditText
        		android:id="@+id/editText1"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:inputType="text"
        		android:layout_margin="1dp"
        		android:layout_weight="1"
        		android:background="#b0e0e6"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#000000"
                android:textStyle="bold">
    		</EditText>
            
            <EditText
        		android:id="@+id/editText2"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:inputType="text"
        		android:layout_margin="1dp"
        		android:layout_weight="1"
        		android:background="#b0e0e6"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#000000"
                android:textStyle="bold">
                <requestFocus />
    		</EditText>
            
            <EditText
        		android:id="@+id/editText3"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:inputType="text"
        		android:layout_margin="1dp"
        		android:layout_weight="1"
        		android:background="#b0e0e6"
                android:gravity="center"
                android:padding="20dp"
                android:textColor="#000000"
                android:textStyle="bold">
    		</EditText>
    		
		</TableRow>
        
	</TableLayout>
    
     <Button
		android:id="@+id/launchButton"
		android:background="#9999ff"
		android:layout_marginLeft="10dp"
		android:layout_marginTop="80dp"
		android:layout_marginBottom="15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/ok"
		android:textStyle="bold"        
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"/>
     
</RelativeLayout>
